updated links & messages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,8 +59,8 @@
 <footer>
     <p>&copy; 2014 {{ site.title }}</p>
     <p>
-        <a href="http://www.jetbrains.com/"><img src="http://cdn.oreillystatic.com/community/promote/ug_ad_250_viguy.gif"/></a>
-        <a href="http://www.oreilly.com/ug/"><img src="http://www.jetbrains.com/company/docs/logo_jetbrains.png"/></a>
+        <a href="http://www.oreilly.com/ug/"><img src="http://cdn.oreillystatic.com/community/promote/ug_ad_250_viguy.gif"/></a>
+        <a href="http://www.jetbrains.com/"><img src="http://www.jetbrains.com/company/docs/logo_jetbrains.png"/></a>
     </p>
 </footer>
 
