Open eternal links in a new browser tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,16 +70,16 @@
             <p class="text-center">User Group supported by:</p>
 
             <p class="text-center">
-                <a href="http://www.oreilly.com/ug/" title="O’Reilly Media, Inc.">
+                <a href="http://www.oreilly.com/ug/" target="_blank" title="O’Reilly Media, Inc.">
                     <img
                             src="http://cdn.oreillystatic.com/community/promote/ug_ad_250_viguy.gif"
                             alt="O’Reilly Media, Inc."/>
                 </a>
-                <a href="http://www.jetbrains.com/" title="JetBrains s.r.o.">
+                <a href="http://www.jetbrains.com/" target="_blank" title="JetBrains s.r.o.">
                     <img
                         src="http://www.jetbrains.com/company/docs/logo_jetbrains.png" alt="JetBrains s.r.o."/>
                 </a>
-                <a href="http://www.epam.com/" title="EPAM Systems">
+                <a href="http://www.epam.com/" target="_blank" title="EPAM Systems">
                     <img
                         src="/img/epam-corporate-logo.gif" alt="EPAM Systems"/>
                 </a>
