Removed one of logos :)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,10 +79,10 @@
                     <img
                         src="http://www.jetbrains.com/company/docs/logo_jetbrains.png" alt="JetBrains s.r.o."/>
                 </a>
-                <a href="http://www.epam.com/" target="_blank" title="EPAM Systems">
-                    <img
-                        src="/img/epam-corporate-logo.gif" alt="EPAM Systems"/>
-                </a>
+                <!--<a href="http://www.epam.com/" target="_blank" title="EPAM Systems">-->
+                    <!--<img-->
+                        <!--src="/img/epam-corporate-logo.gif" alt="EPAM Systems"/>-->
+                <!--</a>-->
             </p>
         </footer>
     </div>
