Meetup #9 archive + blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="/css/style.css">
 
+    <!-- RSS feed -->
+    <link rel="alternate" type="application/rss+xml" href="/rss.xml" />
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
@@ -48,6 +51,7 @@
                 <li><a href="/#social">Мы в соцсетях</a></li>
                 <li><a href="/#contacts">Контакты</a></li>
                 <li><a href="/meetups.html">Архив встреч</a></li>
+                <li><a href="/blog.html">Блог</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
